--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"Note & Blog",
+    "subTitle":"我梦见一片焦土,一株破土而生的新蕊,它迎着朝阳绽放,向我低语呢喃。",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
