--- a/config.json
+++ b/config.json
@@ -9,5 +9,5 @@
     "onePageListNum":15,
     "urlMode":"issue",
     "showPostSource":"1",
-    "rssSplit":"sentence",
+    "rssSplit":"sentence"
 }
