--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "title":"Note & Blog",
     "subTitle":"我梦见一片焦土,一株破土而生的新蕊,它迎着朝阳绽放,向我低语呢喃。",
     "avatarUrl":"https://avatars.githubusercontent.com/u/75410405?v=4",
-    "GMEEK_VERSION":"last"
     "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "GMEEK_VERSION":"last",
     "homeUrl":"https://blog.chgr.cc",
     "startSite":"04/12/2024",
     "onePageListNum":15,
