--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/75410405?v=4",
     "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
-    "homeUrl":"https://blog.chgr.cc",
+    "homeUrl":"https://blog.zscgr.top",
     "startSite":"04/12/2024",
     "onePageListNum":15,
     "urlMode":"issue",
