--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "exlink":{"home":"https://www.chgr.cc"},
     "UTC":8,
     "urlMode":"issue",
-    "style":"<style>body {background: url('https://tc.chgr.cc/raw/SR/%E6%B5%81%E8%90%A4.avif') center center/cover no-repeat #f0f0f0;}</style>",
+    "style": "<style>#postBody{background: url('https://tc.chgr.cc/raw/SR/%E6%B5%81%E8%90%A4.avif') center center/cover no-repeat #f0f0f0;}</style>"
     "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script>",
     "showPostSource":1,
     "rssSplit":"sentence"
