--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "exlink":{"home":"https://www.chgr.cc"},
     "UTC":8,
     "urlMode":"issue",
-    "style":"<style>#postBody{font-size:20px; background-image: url(https://tc.chgr.cc/raw/SR/%E6%B5%81%E8%90%A4.avif); background-position: center center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed;}</style>",
+    "style":"<style>body{background-image: url(https://tc.chgr.cc/raw/SR/%E6%B5%81%E8%90%A4.avif); background-position: center center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed;}</style>",
     "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script>",
     "showPostSource":1,
     "rssSplit":"sentence"
