--- a/config.json
+++ b/config.json
@@ -11,8 +11,9 @@
     "exlink":{"home":"https://www.chgr.cc"},
     "UTC":8,
     "urlMode":"issue",
-    "style":"<style>#fireworks {position: fixed;top: 0px;z-index: 9999;</style>",
-    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/murenziwei/lw_firewords@latest/index.js'></script><script>var yh = new CursorSpecialEffects();yh.init();</script>",
+    "style":"<style>body {background-color: #000;background-image: url(https://tc.chgr.cc/raw/SR/%E6%B5%81%E8%90%A4.avif);}
+    </style>",
+    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/click@latest/sursor-effects.js'>",
     "showPostSource":1,
     "rssSplit":"sentence"
 }
