--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "exlink":{"home":"https://www.chgr.cc"},
     "UTC":8,
     "urlMode":"issue",
-    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/click@latest/sursor-effects.js'>",
+    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/click@latest/sursor-effects.js'></script>",
     "showPostSource":1,
     "rssSplit":"sentence"
 }
