--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
     "exlink":{"home":"https://www.chgr.cc"},
     "UTC":8,
     "urlMode":"issue",
-    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/click@latest/sursor-effects.js'></script></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/mouse-trail/mouse-trail.js'></script>",
+    "style":"<style>*{cursor: none;}</style>",
+    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mouseclick/sursor-effects.js'></script></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/mouse-trail/mouse-trail.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/sursor/script.js'></script",
     "showPostSource":1,
     "rssSplit":"sentence"
 }
