--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "UTC":8,
     "urlMode":"issue",
     "style":"<style>* {cursor: none;}</style>",
-    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mouseclick/sursor-effects.js'></script></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/mouse-trail/mouse-trail.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/sursor/script.js'></script>",
+    "script":"<script async src='//fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js'></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mouseclick/sursor-effects.js'></script></script><script async src='//fastly.jsdelivr.net/gh/ZSCGR/mouse@latest/mousestyle/mouse-trail/mouse-trail.js'></script>",
     "showPostSource":1,
     "rssSplit":"sentence"
 }
